@@ -6149,8 +6149,8 @@ extcached({cache}, {path}, {extcmd})
 filereadable({path})  Integer     Checks whether {expr} points to a
                                   non-directory that can be read.
 .br
-filetype({fnum} [, {resolve}])
-                      String      Returns file type from position.
+filetype({file} [, {resolve}])
+                      String      Returns file type from position/path.
 .br
 fnameescape({expr})   String      Escapes {expr} for use in a :command.
 .br
@@ -6249,7 +6249,18 @@ Checks whether {path} exists and refers to a non-directory entry and its
 permissions allow reading.  Returns boolean value describing result of the
 check.
 
-.BI "filetype({fnum} [, {resolve}])"
+.BI "filetype({file} [, {resolve}])"
+
+Checks type of a view's entry or of a file specified by its path.
+
+Parameter {file} can be of the following forms:
+ \- '.' to get type of file under the cursor in the active pane
+ \- numerical value base 1 to get type of file on specified line number (only
+\if there are no charactes other than "+-0123456789")
+ \- a path (prepend "./" to force interpretation of a number or '.' as a path)
+
+Optional parameter {resolve} is treated as a boolean and specifies whether
+symbolic links should be resolved.
 
 The result is a string, which represents file type and is one of the list:
     exe     executables
@@ -6265,13 +6276,6 @@ The result is a string, which represents file type and is one of the list:
             non-file (pseudo-entries in compare view)
 
 The result can also be an empty string in case of invalid argument.
-
-Parameter {fnum} can have following values:
-    \- '.' to get type of file under the cursor in the active pane
-    \- numerical value base 1 to get type of file on specified line number
-
-Optional parameter {resolve} is treated as a boolean and specifies whether
-symbolic links should be resolved.
 
 .BI fnameescape({expr})
 
